--- a/Day 1/Style.css
+++ b/Day 1/Style.css
@@ -76,28 +76,7 @@ background-color: #fff;
 
 
 }
-
-main{
-    height: 100vh;
-}
-
-a{
-    background-color:#5f9ea0 ;
-    color: rgb(20, 20, 20);
-    padding: 6px 10px;
-    border-radius: 4px;
-    box-shadow: 0 0 4px 2px;
-}
-
-.section-one{
-    width: 100vw;
-    height: fit-content;
-    display: flex;
-    flex-direction: column;
-    }
-
-
-
+ 
     
 .footer-div{
     width: 100vw;
@@ -136,4 +115,70 @@ a{
     padding: 4px 6px;
     border-radius: 4px;
     cursor: pointer;
+}
+
+
+#Calculator{
+width: 100vw;
+height: 100vh;
+display: flex;
+flex-direction: column;
+align-items: center;
+justify-content: center;
+}
+    
+    .cal-container{
+    background-color: #5f9ea0;
+    padding: 5px 15px;
+    border-radius: 15px;
+
+}
+
+.cal-buttons{
+    width: 350px;
+    border: none;
+    padding: 10px;
+    border-radius: 15px;
+    display: grid;
+    grid-template-columns: 3fr 3fr 3fr 3fr;
+}
+ .btn:hover {
+            transform: scale(1.1);
+        }
+        .btn:active {
+            transform: scale(0.95);
+        }
+.btn{
+    margin: 5px;
+    padding: 20px;
+    cursor: pointer;
+    background-color: transparent;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: auto;
+    border: none;
+    font-weight: 500;
+    font-size: 30px;
+    color: #fff;
+}
+.btn:hover{
+    color: green;
+}
+span{
+font-size: 60px;
+display: flex;
+padding: 0 1px;
+place-content: end;
+color: #fff;
+width: 100%;
+
+}
+
+.equal-btn {
+  color: orange;
+    grid-column-start:  2 ;
+    grid-column-end:  4;
+    font-size: 40px;
 }
